<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/photoImageView"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@color/colorAccent"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/nameTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/emailTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <TextView
        android:id="@+id/UIDTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-100dp"
        android:text="@string/UID"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/bnt_cerrar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@color/colorBoton"
        android:onClick="logout"
        android:text="@string/iniciar"
        android:layout_marginTop="200dp"
        style="@style/Widget.AppCompat.Button.Borderless" />


</LinearLayout>