<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QRActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanner"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn_QR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QR"
            android:onClick="btnEscanear"/>

        <Button
            android:id="@+id/btn_Generar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/QRGenerar"/>
    </LinearLayout>


    
    <ImageView
        android:id="@+id/imageViewQR"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@color/colorAccent"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/UIDTextVew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/UID"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
    

</LinearLayout>